objects/Bookkeeping__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Client_Name__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Am_I_Reviewer__c</fullName>
        <formula>$User.Id = LEFT(Bookkeeper_Reviewer_Id__c, 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am I Reviewer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apr_Bookkeeping_Stages__c</fullName>
        <label>Apr Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apr_Called_Client_On__c</fullName>
        <inlineHelpText>Please call the client at least once a month and record when you did so here.</inlineHelpText>
        <label>Apr Called Client On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apr_Comments__c</fullName>
        <label>Apr Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apr_Complete__c</fullName>
        <label>Apr Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apr_Days_From_Review_to_Send_Financials__c</fullName>
        <formula>Apr_Send_Financials_or_Review_Notes__c -  Apr_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apr Days From Review to Send Financials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_Days_from_Not_Started_to_Complete__c</fullName>
        <formula>Apr_Complete__c - Apr_Not_Started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apr Days from Not Started to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_Days_to_1st_Review__c</fullName>
        <formula>Apr_Review__c -  Apr_In_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apr Days to 1st Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_Docs_Rcvd_From_Client__c</fullName>
        <label>Apr Docs Rcvd From Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apr_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Apr Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apr_Due_Date__c</fullName>
        <label>Apr Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>May 15th</fullName>
                </value>
                <value>
                    <fullName>May 25th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apr_Financials_Sent_to_Client_On__c</fullName>
        <label>Apr Financials Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apr_In_Progress__c</fullName>
        <label>Apr In Progress</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apr_Not_Started__c</fullName>
        <label>Apr Not Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apr_Priority__c</fullName>
        <label>Apr Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apr_Review__c</fullName>
        <label>Apr Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apr_Send_Financials_or_Review_Notes__c</fullName>
        <label>Apr Send Financials or Review Notes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apr_Type_of_Financials_Sent__c</fullName>
        <label>Apr Type of Financials Sent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Financials_Sent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bookkeeping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aug_Bookkeeping_Stages__c</fullName>
        <label>Aug Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aug_Called_Client_On__c</fullName>
        <inlineHelpText>Please call the client at least once a month and record when you did so here.</inlineHelpText>
        <label>Aug Called Client On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Aug_Comments__c</fullName>
        <label>Aug Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aug_Complete__c</fullName>
        <label>Aug Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aug_Days_From_Review_to_Send_Financials__c</fullName>
        <formula>Aug_Send_Financials_or_Review_Notes__c -  Aug_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aug Days From Review to Send Financials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_Days_from_Not_Started_to_Complete__c</fullName>
        <formula>Aug_Complete__c - Aug_Not_Started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aug Days from Not Started to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_Days_to_1st_Review__c</fullName>
        <formula>Aug_Review__c -  Aug_In_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aug Days to 1st Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_Docs_Rcvd_From_Client__c</fullName>
        <label>Aug Docs Rcvd From Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aug_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Aug Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aug_Due_Date__c</fullName>
        <label>Aug Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sep 15th</fullName>
                </value>
                <value>
                    <fullName>Sep 25th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aug_Financials_Sent_to_Client_On__c</fullName>
        <label>Aug Financials Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aug_In_Progress__c</fullName>
        <label>Aug In Progress</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aug_Not_Started__c</fullName>
        <label>Aug Not Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aug_Priority__c</fullName>
        <label>Aug Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aug_Review__c</fullName>
        <label>Aug Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aug_Send_Financials_or_Review_Notes__c</fullName>
        <label>Aug Send Financials or Review Notes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aug_Type_of_Financials_Sent__c</fullName>
        <label>Aug Type of Financials Sent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Financials_Sent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BK_Stage__c</fullName>
        <formula>IF( 
LEFT(Name,4) &lt;&gt; TEXT(YEAR(TODAY())), TEXT(Dec_Bookkeeping_Stages__c) , 

IF(MONTH(TODAY()) = 1,  TEXT(Dec_Bookkeeping_Stages__c),
IF(MONTH(TODAY()) = 2,  TEXT(Jan_Bookkeeping_Stages__c),
IF(MONTH(TODAY()) = 3,  TEXT(Feb_Bookkeeping_Stages__c),
IF(MONTH(TODAY()) = 4,  TEXT(Mar_Bookkeeping_Stages__c),
IF(MONTH(TODAY()) = 5,  TEXT(Apr_Bookkeeping_Stages__c),
IF(MONTH(TODAY()) = 6,  TEXT(May_Bookkeeping_Stages__c),
IF(MONTH(TODAY()) = 7,  TEXT(Jun_Bookkeeping_Stages__c),
IF(MONTH(TODAY()) = 8,  TEXT(Jul_Bookkeeping_Stages__c),
IF(MONTH(TODAY()) = 9,  TEXT(Aug_Bookkeeping_Stages__c),
IF(MONTH(TODAY()) = 10,  TEXT(Sep_Bookkeeping_Stages__c),
IF(MONTH(TODAY()) = 11,  TEXT(Oct_Bookkeeping_Stages__c), TEXT(Nov_Bookkeeping_Stages__c)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Year__c</fullName>
        <description>If the book year is the current year, the checkbox is checked.</description>
        <formula>IF(FIND(TEXT(YEAR(TODAY())),Name) &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Year is Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bookkeeper_Email__c</fullName>
        <label>Bookkeeper Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bookkeeper_Id__c</fullName>
        <label>Bookkeeper Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookkeeper_Reviewer_Id__c</fullName>
        <label>Bookkeeper Reviewer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookkeeper_Reviewer__c</fullName>
        <label>Bookkeeper Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ashley Cloutier</fullName>
                </value>
                <value>
                    <fullName>Blanca Lemus</fullName>
                </value>
                <value>
                    <fullName>Christina Chavez</fullName>
                </value>
                <value>
                    <fullName>Crystal Moyer</fullName>
                </value>
                <value>
                    <fullName>Jasmine Licitra</fullName>
                </value>
                <value>
                    <fullName>Kiera Dunphy</fullName>
                </value>
                <value>
                    <fullName>Lanzi Reel</fullName>
                </value>
                <value>
                    <fullName>Maria Boone</fullName>
                </value>
                <value>
                    <fullName>Rebecca Gallegos</fullName>
                </value>
                <value>
                    <fullName>Tracy Cooklin</fullName>
                </value>
                <value>
                    <fullName>Trisha Cullinane</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeper_Time__c</fullName>
        <label>Bookkeeper Time</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookkeeper__c</fullName>
        <label>Bookkeeper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abraham Carrillo</fullName>
                </value>
                <value>
                    <fullName>Alishia Greene-Jenkins</fullName>
                </value>
                <value>
                    <fullName>Antoinette Reid</fullName>
                </value>
                <value>
                    <fullName>Ashley Cloutier</fullName>
                </value>
                <value>
                    <fullName>Austin Stephens</fullName>
                </value>
                <value>
                    <fullName>Becky Arnold</fullName>
                </value>
                <value>
                    <fullName>Blanca Lemus</fullName>
                </value>
                <value>
                    <fullName>Brenda Guzman</fullName>
                </value>
                <value>
                    <fullName>Brenda Navarrette</fullName>
                </value>
                <value>
                    <fullName>Christina Chavez</fullName>
                </value>
                <value>
                    <fullName>Cindy Mejorado</fullName>
                </value>
                <value>
                    <fullName>Crystal Moyer</fullName>
                </value>
                <value>
                    <fullName>Danny On</fullName>
                </value>
                <value>
                    <fullName>Dawn Popa</fullName>
                </value>
                <value>
                    <fullName>Imelda Hilario</fullName>
                </value>
                <value>
                    <fullName>Jacquie Wallace-Small</fullName>
                </value>
                <value>
                    <fullName>Jasmine Licitra</fullName>
                </value>
                <value>
                    <fullName>Jennifer Soikowski</fullName>
                </value>
                <value>
                    <fullName>Jessica Turner</fullName>
                </value>
                <value>
                    <fullName>Jonathan Salyer</fullName>
                </value>
                <value>
                    <fullName>Kayla Fleming</fullName>
                </value>
                <value>
                    <fullName>Keanu Rhodes</fullName>
                </value>
                <value>
                    <fullName>Kenneth Harrah</fullName>
                </value>
                <value>
                    <fullName>Kiera Dunphy</fullName>
                </value>
                <value>
                    <fullName>Kimberly Smiley</fullName>
                </value>
                <value>
                    <fullName>Kingstone Mashingaidze</fullName>
                </value>
                <value>
                    <fullName>Lanzi Reel</fullName>
                </value>
                <value>
                    <fullName>Mandrell Hahn</fullName>
                </value>
                <value>
                    <fullName>Maria Boone</fullName>
                </value>
                <value>
                    <fullName>Melissa McBride</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeping_Frequency__c</fullName>
        <label>Bookkeeping Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeping_IC__c</fullName>
        <label>Bookkeeping IC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bookkeeper 1</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 2</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 3</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 4</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 5</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 6</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 7</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 8</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 9</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 10</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 11</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 12</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 13</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 14</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 15</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 16</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 17</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 18</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 19</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 20</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 21</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 22</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 23</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 24</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 25</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 26</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 27</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 28</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 29</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper 30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeping_Reviewer_Email__c</fullName>
        <label>Bookkeeping Reviewer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bookkeeping_Stages__c</fullName>
        <label>Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Supporting Documents Received</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Waiting on Client</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Review Notes</fullName>
                </value>
                <value>
                    <fullName>Send Finacials</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Both_Names__c</fullName>
        <formula>IF(NOT(ISBLANK( Second_Name__c)), Contact_Name__r.FirstName + &quot; &quot; + Contact_Name__r.LastName + &quot; &amp; &quot; + Second_Name__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Both Names</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Notes_Link__c</fullName>
        <formula>Case__r.Box_Notes_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Box Notes Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Viewable_Folder__c</fullName>
        <inlineHelpText>Please enter the client&apos;s Box Viewable Folder URL here. This link will be used when emails are sent to the client.</inlineHelpText>
        <label>Box Viewable Folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Budget_Rollup_Attorney__c</fullName>
        <label>Budget Rollup Attorney</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Rollup_Bookkeeper__c</fullName>
        <label>Budget Rollup Bookkeeper</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Rollup_CPA__c</fullName>
        <label>Budget Rollup CPA</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Rollup_EA__c</fullName>
        <label>Budget Rollup EA</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Rollup_Tax_Preparer__c</fullName>
        <label>Budget Rollup Tax Preparer</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <inlineHelpText>How is budgeting done for this project?</inlineHelpText>
        <label>Budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No budget</fullName>
                    <default>true</default>
                    <label>No budget</label>
                </value>
                <value>
                    <fullName>Total project hours</fullName>
                </value>
                <value>
                    <fullName>Total project fees</fullName>
                </value>
                <value>
                    <fullName>Hours per task</fullName>
                </value>
                <value>
                    <fullName>Hours per person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Bookkeeping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Email__c</fullName>
        <inlineHelpText>This is the email that will be used when sending emails to the Client from Salesforce.</inlineHelpText>
        <label>Client Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Bookkeepings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Unresponsive__c</fullName>
        <formula>IF(
OR(
ISPICKVAL(Jan_Bookkeeping_Stages__c, &quot;Client Unresponsive&quot;),
ISPICKVAL(Feb_Bookkeeping_Stages__c, &quot;Client Unresponsive&quot;),
ISPICKVAL(Mar_Bookkeeping_Stages__c, &quot;Client Unresponsive&quot;),
ISPICKVAL(Apr_Bookkeeping_Stages__c, &quot;Client Unresponsive&quot;),
ISPICKVAL(May_Bookkeeping_Stages__c, &quot;Client Unresponsive&quot;),
ISPICKVAL(Jun_Bookkeeping_Stages__c, &quot;Client Unresponsive&quot;),
ISPICKVAL(Jul_Bookkeeping_Stages__c, &quot;Client Unresponsive&quot;),
ISPICKVAL(Aug_Bookkeeping_Stages__c, &quot;Client Unresponsive&quot;),
ISPICKVAL(Sep_Bookkeeping_Stages__c, &quot;Client Unresponsive&quot;),
ISPICKVAL(Oct_Bookkeeping_Stages__c, &quot;Client Unresponsive&quot;),
ISPICKVAL(Nov_Bookkeeping_Stages__c, &quot;Client Unresponsive&quot;),
ISPICKVAL(Dec_Bookkeeping_Stages__c, &quot;Client Unresponsive&quot;)),
TRUE,
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Unresponsive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Wide_Comments__c</fullName>
        <inlineHelpText>Putting comments in this box will put the same comments in this box on every bookkeeping record that belongs to this client.</inlineHelpText>
        <label>Client-Wide Comments</label>
        <length>35000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completing_Books_For_Fiscal_Year_End__c</fullName>
        <label>Completing Books for Fiscal Year End</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completing_Books_for_Tax_Year__c</fullName>
        <label>Completing Books for Tax Year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complexity_Score__c</fullName>
        <label>Complexity Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name_Formula__c</fullName>
        <formula>Contact_Name__r.FirstName + &quot; &quot; + Contact_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the name that will be used when sending emails to the Client from Salesforce.</inlineHelpText>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bookkeeping Records</relationshipLabel>
        <relationshipName>Bookkeeping_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Year__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System field displays year of created date</inlineHelpText>
        <label>Created Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Due_Date__c</fullName>
        <formula>IF(MONTH(TODAY()) = 1,  TEXT( Last_Years_Books__r.Dec_Bookkeeping_Stages__c  ), 
IF(MONTH(TODAY()) = 2, TEXT(Jan_Due_Date__c), 
IF(MONTH(TODAY()) = 3, TEXT(Feb_Due_Date__c), 
IF(MONTH(TODAY()) = 4, TEXT(Mar_Due_Date__c), 
IF(MONTH(TODAY()) = 5, TEXT(Apr_Due_Date__c), 
IF(MONTH(TODAY()) = 6, TEXT(May_Due_Date__c), 
IF(MONTH(TODAY()) = 7, TEXT(Jun_Due_Date__c), 
IF(MONTH(TODAY()) = 8, TEXT(Jul_Due_Date__c), 
IF(MONTH(TODAY()) = 9, TEXT(Aug_Due_Date__c), 
IF(MONTH(TODAY()) = 10, TEXT(Sep_Due_Date__c), 
IF(MONTH(TODAY()) = 11, TEXT(Oct_Due_Date__c), TEXT(Nov_Due_Date__c))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Due Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Priority__c</fullName>
        <formula>IF(MONTH(TODAY()) = 1, TEXT( Last_Years_Books__r.Dec_Priority__c ), 
IF(MONTH(TODAY()) = 2, TEXT(Jan_Priority__c ), 
IF(MONTH(TODAY()) = 3, TEXT(Feb_Priority__c ), 
IF(MONTH(TODAY()) = 4, TEXT(Mar_Priority__c ), 
IF(MONTH(TODAY()) = 5, TEXT(Apr_Priority__c ), 
IF(MONTH(TODAY()) = 6, TEXT(May_Priority__c ), 
IF(MONTH(TODAY()) = 7, TEXT(Jun_Priority__c ), 
IF(MONTH(TODAY()) = 8, TEXT(Jul_Priority__c ), 
IF(MONTH(TODAY()) = 9, TEXT(Aug_Priority__c ), 
IF(MONTH(TODAY()) = 10, TEXT(Sep_Priority__c ), 
IF(MONTH(TODAY()) = 11, TEXT(Oct_Priority__c ), TEXT(Nov_Priority__c ))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dec_Bookkeeping_Stages__c</fullName>
        <label>Dec Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dec_Called_Client_On__c</fullName>
        <inlineHelpText>Please call the client at least once a month and record when you did so here.</inlineHelpText>
        <label>Dec Called Client On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dec_Comments__c</fullName>
        <label>Dec Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dec_Complete__c</fullName>
        <label>Dec Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dec_Days_From_Review_to_Send_Financials__c</fullName>
        <formula>Dec_Send_Financials_or_Review_Notes__c -  Dec_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec Days From Review to Send Financials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Days_from_Not_Started_to_Complete__c</fullName>
        <formula>Dec_Complete__c - Dec_Not_Started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec Days from Not Started to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Days_to_1st_Review__c</fullName>
        <formula>Dec_Review__c - Dec_In_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec Days to 1st Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Docs_Rcvd_From_Client__c</fullName>
        <label>Dec Docs Rcvd From Client</label>
        <type>Date</type>
    </fields>
</CustomObject>